# CustomVehicles

./: CMakeLists.txt  CustomVehicles.cpp  README.md  plugins
.github/workflows/: build.yml
include/: amxplugin.h  plugin.h
include/amx/: amx.h
plugins/: CMakeLists.txt
src/: CMakeLists.txt  CustomVehicles.cpp
